manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oncall-prober
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: oncall-prober
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
